syntax = "proto3";

package configs;

import "Configs/swarm_config.proto";

// Simulation configuration.
message SimulationConfig {
  // End time in seconds.
  float end_time = 1;

  // Time scale.
  float time_scale = 2;

  // Interceptor swarm configurations.
  repeated SwarmConfig interceptor_swarm_configs = 3;

  // Threat swarm configurations.
  repeated SwarmConfig threat_swarm_configs = 4;
}
